istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sock-shop-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sock-shop
spec:
  hosts:
  - "*"
  gateways:
  - sock-shop-gateway
  http:
  - match:
    - uri:
        exact: /README.html
    - uri:
        prefix: /nginx
    route:
    - destination:
        host: my-nginx
        port:
          number: 80
  # - match:
  #   - uri:
  #       exact: /productpage
  #   - uri:
  #       prefix: /static
  #   - uri:
  #       exact: /login
  #   - uri:
  #       exact: /logout
  #   - uri:
  #       prefix: /api/v1/products
  - route:
    - destination:
        host: front-end
        port:
          number: 80
